--- a/index.html
+++ b/index.html
@@ -4,25 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calculate your BMI</title>
 <style>
-#first
-{
-	position:absolute;
-	width:10%;
-	left:10%;
-}
-#second
-{
-	position:absolute;
-	left:20%;
-	width:50%;
-}
 #sub
 { 
 	margin-left:40%;
 }	
 .dog
 {
-	margin-left:20%;
+	margin-left:15%;
 	border-spacing:10px;
 	font-size:25px;
 }
@@ -43,9 +31,9 @@ background-color: #f2f2f2;
 <h1 id="head">BMI Calculator</h1>
 <hr>
 <form>
-<table width="70%" class="dog">
+<table width="100%" class="dog">
 <tr>
-<td>	
+<td width="20%">	
     <label for="height">Height</label>
 </td>
 <td>
