--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ background-color: #f2f2f2;
     <label for="height">Height</label>
 </td>
 <td>
-	<input type="number" id="height" step=".01">
+	<input type="number" id="height" step=".01" style="border:thin solid #444444">
 <select id="o">
 <option>metres</option>
 <option selected>feet</option>	
@@ -49,7 +49,7 @@ background-color: #f2f2f2;
 <label for="weight">Weight</label>
 </td>
 <td>
-<input type="number" id="weight">
+<input type="number" id="weight" style="border:thin solid #444444">
 <select>
 <option>kg</option>
 </select>
